// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render color 1`] = `
<div
  class="wp-components-icon css-1cuw20t"
  data-g2-c16t="true"
  data-g2-component="Icon"
>
  <svg />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-icon css-vawoc3"
  data-g2-c16t="true"
  data-g2-component="Icon"
>
  <svg />
</div>
`;

exports[`props should render size 1`] = `
<div
  class="wp-components-icon css-1hbx1n"
  data-g2-c16t="true"
  data-g2-component="Icon"
>
  <svg />
</div>
`;
